template temps extérieur

--- a/core/template/dashboard/cmd.info.string.CurrentWeather.html
+++ b/core/template/dashboard/cmd.info.string.CurrentWeather.html
@@ -1,12 +1,12 @@
 <div class="cmd container-fluid tooltips cmd cmd-widget" style="width:200px;" data-type="info"
      data-subtype="string" data-cmd_id="#id#">
     <center>
-        <p class='cmdName' style="font-weight: bold;font-size : 12px;">#name#</p>
-        <span class="pull-left">
+        <div class='cmdName' style="font-weight: bold;font-size : 12px;">#name#</div>
+    </center>
+    <span class="pull-left">
             <img class="info iconCmd#id#" width="35px"/>
     </span>
-        <span class="tempExt#id#"></span>
-    </center>
+    <span class="tempExt#id#"></span>
     <script>
         var weatherValue = #state#;
         $('.iconCmd#id#').empty();
