--- a/core/template/dashboard/mitsubishimelcloud.html
+++ b/core/template/dashboard/mitsubishimelcloud.html
@@ -2,10 +2,6 @@
   <link rel="stylesheet" href="plugins/mitsubishimelcloud/core/template/css/mitsubishimelcloud.template.css"/>
   <link rel="stylesheet" href="plugins/mitsubishimelcloud/core/template/css/mitsubishimelcloud.slider.css"/>
   
-  <!-- <center class="widget-name"><a href="#eqLink#" style="font-size : 1.2em;#hideEqLogicName#"></a>
-    <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh#"><i class="fas fa-sync"></i></span>
-  </center> -->
-  
   <div class="TitleBar">
     <input type="checkbox" class="PowerOnOff" id="PowerOnOff#id#" #Power# />
     <label for="PowerOnOff#id#">
@@ -29,15 +25,15 @@
         <span class="SelectedMode">TBD</span>
       </div>
       <div class="VertiButtonZone ModeSelection">
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="Mode_3" id="ButtonMode_3" data-key="3">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="Mode_3" id="ButtonMode_3" data-key="3">
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="Mode_2" id="ButtonMode_2" data-key="2">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="Mode_2" id="ButtonMode_2" data-key="2">
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="Mode_7" id="ButtonMode_7" data-key="7">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="Mode_7" id="ButtonMode_7" data-key="7">
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="Mode_8" id="ButtonMode_8" data-key="8">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="Mode_8" id="ButtonMode_8" data-key="8">
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="Mode_1" id="ButtonMode_1" data-key="1">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="Mode_1" id="ButtonMode_1" data-key="1">
         </label></div>
       </div>
     </div>
@@ -47,19 +43,19 @@
     <div class="CommandTitle">#FanTitle#</div>
     <div class="CommandControls">
       <div class="VertiButtonZone FanSelection">
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="FanSpeed_1" id="ButtonFanSpeed_1" data-key="1">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="FanSpeed_1" id="ButtonFanSpeed_1" data-key="1">
           <label class="FanSpeedLabelVerti ButtonLabel" id="LabelFanSpeed_1">1</label>
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="FanSpeed_2" id="ButtonFanSpeed_2" data-key="2">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="FanSpeed_2" id="ButtonFanSpeed_2" data-key="2">
           <label class="FanSpeedLabelVerti ButtonLabel" id="LabelFanSpeed_2">2</label>
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="FanSpeed_3" id="ButtonFanSpeed_3" data-key="3">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="FanSpeed_3" id="ButtonFanSpeed_3" data-key="3">
           <label class="FanSpeedLabelVerti ButtonLabel" id="LabelFanSpeed_3">3</label>
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="FanSpeed_4" id="ButtonFanSpeed_4" data-key="4">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="FanSpeed_4" id="ButtonFanSpeed_4" data-key="4">
           <label class="FanSpeedLabelVerti ButtonLabel" id="LabelFanSpeed_4">4</label>
         </label></div>
-        <div class="VertiZone"><label class="VertiButton ZoneOff" for="FanSpeed_5" id="ButtonFanSpeed_5" data-key="5">
+        <div class="VertiZone5"><label class="VertiButton ZoneOff" for="FanSpeed_5" id="ButtonFanSpeed_5" data-key="5">
           <label class="FanSpeedLabelVerti ButtonLabel" id="LabelFanSpeed_5">5</label>
         </label></div>
       </div>
@@ -137,7 +133,12 @@
   <div class="CommandBlock">
     <div class="CommandTitle">#ForecastTitle#</div>
     <div class="CommandControls" style="height: 166px;">
-
+      <div class="VertiButtonZone WeatherArea">
+        <div class="VertiZone4">#WeatherDay_1#<br />Act.<label class="WeatherIconBlock"><img src="#WeatherIcon_1#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_1#</label></div>
+        <div class="VertiZone4">#WeatherDay_2#<br />Jour<label class="WeatherIconBlock"><img src="#WeatherIcon_2#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_2#</label></div>
+        <div class="VertiZone4">#WeatherDay_3#<br />Nuit<label class="WeatherIconBlock"><img src="#WeatherIcon_3#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_3#</label></div>
+        <div class="VertiZone4">#WeatherDay_4#<br />Jour<label class="WeatherIconBlock"><img src="#WeatherIcon_4#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_4#</label></div>
+      </div>
     </div>
   </div>
     
