--- a/core/template/dashboard/mitsubishimelcloud.html
+++ b/core/template/dashboard/mitsubishimelcloud.html
@@ -134,10 +134,10 @@
     <div class="CommandTitle">#ForecastTitle#</div>
     <div class="CommandControls" style="height: 166px;">
       <div class="VertiButtonZone WeatherArea">
-        <div class="VertiZone4">#WeatherDay_1#<br />Act.<label class="WeatherIconBlock"><img src="#WeatherIcon_1#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_1#</label></div>
-        <div class="VertiZone4">#WeatherDay_2#<br />Jour<label class="WeatherIconBlock"><img src="#WeatherIcon_2#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_2#</label></div>
-        <div class="VertiZone4">#WeatherDay_3#<br />Nuit<label class="WeatherIconBlock"><img src="#WeatherIcon_3#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_3#</label></div>
-        <div class="VertiZone4">#WeatherDay_4#<br />Jour<label class="WeatherIconBlock"><img src="#WeatherIcon_4#" style="width: 48px; margin-top: 10px; border-radius: 6px" />#WeatherTemperature_4#</label></div>
+        <div class="VertiZone4">#WeatherDay_1#<br />#WeatherType_1#<label class="WeatherIconBlock">#WeatherIcon_1##WeatherTemperature_1#</label></div>
+        <div class="VertiZone4">#WeatherDay_2#<br />#WeatherType_2#<label class="WeatherIconBlock">#WeatherIcon_2##WeatherTemperature_2#</label></div>
+        <div class="VertiZone4">#WeatherDay_3#<br />#WeatherType_3#<label class="WeatherIconBlock">#WeatherIcon_3##WeatherTemperature_3#</label></div>
+        <div class="VertiZone4">#WeatherDay_4#<br />#WeatherType_4#<label class="WeatherIconBlock">#WeatherIcon_4##WeatherTemperature_4#</label></div>
       </div>
     </div>
   </div>
