--- a/core/template/dashboard/cmd.action.slider.ModeMitsubishi.html
+++ b/core/template/dashboard/cmd.action.slider.ModeMitsubishi.html
@@ -30,7 +30,7 @@
     
     // Send selected mode to Melcloud
     $(".ModeSelection#id# label").click(function(){
-      jeedom.cmd.execute({id: '#id#', value: {message: parseInt($(this).attr('data-key'))}, notify:true});
+      jeedom.cmd.execute({id: '#id#', value: {slider: parseInt($(this).attr('data-key'))}, notify:true});
     });
   </script>
 </div>
