--- a/core/template/dashboard/cmd.action.slider.FanSpeedMitsubishi.html
+++ b/core/template/dashboard/cmd.action.slider.FanSpeedMitsubishi.html
@@ -33,7 +33,7 @@
       $(".FanSelection#id# #SpanFanSpeed_#state#").addClass("ZoneOn");
       // Send selected fan speed to Melcloud
       $(".FanSelection#id# label").click(function(){
-        jeedom.cmd.execute({id: '#id#', value: {message: parseInt($(this).attr('data-key'))}, notify:true});
+        jeedom.cmd.execute({id: '#id#', value: {slider: parseInt($(this).attr('data-key'))}, notify:true});
       });
     </script>
   </div>
