--- a/core/template/dashboard/mitsubishimelcloud.html
+++ b/core/template/dashboard/mitsubishimelcloud.html
@@ -12,6 +12,10 @@
     <span class="RoomName">#MitsuMelcloudName#</span>
   </div>
 
+  <div class="WarningZone">
+    #WarningText#
+  </div>
+
   <div class="ScenariosColumn">
     <div class="CommandTitle">#Scenario#</div>
     <div class="CommandSetUp" style="width: 138px; height: 342px;">
@@ -27,7 +31,7 @@
     <div class="CommandControls">
       <div class="HoriZone ZoneOn">
         <img src="plugins/mitsubishimelcloud/data/img/Operate_on_Ata_#OperationMode_Value#.png" style="width: 35px; margin-left:10px; margin-top: 5px;" />
-        <span class="SelectedMode">TBD</span>
+        <span class="SelectedMode">N/A</span>
       </div>
       <div class="VertiButtonZone ModeSelection">
         <div class="VertiZone5"><label class="VertiButton ZoneOff" for="Mode_3" id="ButtonMode_3" data-key="3">
